ci-cd/k8s/sample/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kh-ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/hsts: "true"
    nginx.org/hsts-max-age: "2592000"
    nginx.org/hsts-include-subdomains: "true"
spec:
  tls:
    - hosts:
      - dev.cedilloscorp.cloud
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      #secretName: tls-certificate-sample
      secretName: dev-cedilloscorp-cloud
  rules:
  - host: dev.cedilloscorp.cloud
    http:
      paths:
      - backend:
          service:
            name: hello-app
            port:
              number: 8080
        path: /hello
        pathType: ImplementationSpecific
